# solana-program

./: .gitignore  README.md  package-lock.json  package.json
src/client/: hello_world.ts
src/program-rust/: Cargo.toml
src/program-rust/src/: instruction.rs  lib.rs
