
[package]
name = "solana-smart-contract"
version = "0.0.1"
description = "Example solana program written in Rust"
authors = ["Chubiyojo Adejoh"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://github.com/chubi-x"
edition = "2022"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "~1.8.14"

[dev-dependencies]
solana-program-test = "~1.8.14"
solana-sdk = "~1.8.14"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]
